Possible ios navigation alignment fix

--- a/src/styles/Navigation.css
+++ b/src/styles/Navigation.css
@@ -101,7 +101,7 @@
         transform-origin: 0% 0%;
         transform: translate(0, -100%);
         
-        transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+        transition: transform 0.5s;
     }
 
     .navBtn {
